# bark

./: .gitignore  README.md  pyproject.toml
bark_notifier/: bark.conf  core.py
src/bark_notifier/: __init__.py  bark.conf  cli.py  core.py
